[tool.poetry]
name = "catchphrase-generator"
version = "0.1.0"
description = ""
authors = ["kanazashi-s <zacceydesuyo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.5.1"
numpy = "^1.22.2"
pandas = "^1.4.1"
ipadic = "^1.0.0"
sentence-transformers = "^2.2.0"
transformers = "^4.16.2"
oauth2client = "^4.1.3"
beautifulsoup4 = "^4.10.0"
pymagnitude = "^0.1.143"
SudachiPy = "^0.6.3"
SudachiDict-core = "^20211220"
bokeh = "^2.4.2"
google-auth = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
